# cursos-alura

./: .gitignore  pyproject.toml
.claude/: settings.local.json
galeria/: admin.py  models.py  urls.py  views.py
galeria/migrations/: 0001_initial.py  0002_fotografia_categoria.py  0003_alter_fotografia_categoria.py  0004_fotografia_ativo.py  0005_fotografia_data_cricao.py  0006_remove_fotografia_data_cricao_and_more.py  0007_alter_fotografia_data_criacao_alter_fotografia_foto.py
setup/: settings.py  urls.py
templates/galeria/: base.html  buscar.html  index.html
templates/galeria/partials/: _footer.html  _header.html
