[project]
name = "alura-django"
version = "0.1.0"
description = ""
authors = [
    {name = "bergsonall",email = "bruninhodubal@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
